--- a/team.html
+++ b/team.html
@@ -197,12 +197,12 @@
         <section class="section-secondary" aria-labelledby="teamHeading">
             <div class="container">
                 <h2 id="teamHeading" class="display-4 heading-blush-bg content-heading-large text-center">Our Bloom'n Powerhouse Team</h2>
-                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-6 g-3">
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-3">
                     <!-- Team Member 1 -->
                     <div class="col">
                         <div class="card team-card shadow h-100 team-card-shadow">
                             <div class="team-member-image">
-                                <img src="images/Team/team-member-1.jpg" alt="Joh - Engineering, Design, Construction & Patron" loading="lazy" decoding="async">
+                                <img src="images/Team/team-member-1.jpeg" alt="Joh - Engineering, Design, Construction & Patron" loading="lazy" decoding="async" width="400" height="400">
                             </div>
                             <div class="card-body text-center">
                                 <h3 class="card-title team-member-name">Joh</h3>
@@ -224,7 +224,20 @@
                         </div>
                     </div>
 
-                    <!-- Team Member 3 -->
+                    <!-- Team Member 4 -->
+                    <div class="col">
+                        <div class="card team-card shadow h-100 team-card-shadow">
+                            <div class="team-member-image">
+                                <img src="images/Team/team-member-4.jpeg" alt="Sarah - R&D, Creative Support & Patron" loading="lazy" decoding="async" width="400" height="400">
+                            </div>
+                            <div class="card-body text-center">
+                                <h3 class="card-title team-member-name">Sarah</h3>
+                                <p class="card-text text-charcoal">R&D, Creative Support & Patron</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 3 (Chelsea) -->
                     <div class="col">
                         <div class="card team-card shadow h-100 team-card-shadow">
                             <div class="team-member-image">
@@ -236,42 +249,63 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
 
-                    <!-- Team Member 4 -->
-                    <div class="col">
-                        <div class="card team-card shadow h-100 team-card-shadow">
-                            <div class="team-member-image">
-                                <img src="images/Team/team-member-4.jpg" alt="Sarah - R&D, Creative Support & Patron" loading="lazy" decoding="async">
-                            </div>
-                            <div class="card-body text-center">
-                                <h3 class="card-title team-member-name">Sarah</h3>
-                                <p class="card-text text-charcoal">R&D, Creative Support & Patron</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Team Member 5 -->
-                    <div class="col">
-                        <div class="card team-card shadow h-100 team-card-shadow">
-                            <div class="team-member-image">
-                                <img src="images/Team/team-member-5.jpg" alt="Gail - On-Site Event Support" loading="lazy" decoding="async">
-                            </div>
-                            <div class="card-body text-center">
-                                <h3 class="card-title team-member-name">Gail</h3>
-                                <p class="card-text text-charcoal">On-Site Event  Support</p>
-                            </div>
-                        </div>
-                    </div>
-
+        <!-- Collaborators Section -->
+        <section class="section-secondary" aria-labelledby="collaboratorsHeading">
+            <div class="container">
+                <h2 id="collaboratorsHeading" class="display-4 heading-blush-bg content-heading-large text-center">Our Bloom'n Powerhouse Collaborators</h2>
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-3">
                     <!-- Team Member 6 -->
                     <div class="col">
-                        <div class="card team-card shadow h-100 team-card-shadow">
-                            <div class="team-member-image">
-                                <img src="images/Team/team-member-6.jpg" alt="Neeno - Music Maestro & Creative Collaborator" loading="lazy" decoding="async">
+                        <div class="card team-card shadow h-100 team-card-shadow" style="height: 400px;">
+                            <div class="team-member-image" style="height: 400px;">
+                                <img src="images/Team/team-member-6.jpg" alt="Neeno - Music Maestro" loading="lazy" decoding="async" width="400" height="400" style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                             <div class="card-body text-center">
                                 <h3 class="card-title team-member-name">Neeno</h3>
-                                <p class="card-text text-charcoal">Music Maestro & Creative Collaborator</p>
+                                <p class="card-text text-charcoal">Music Maestro</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 7 -->
+                    <div class="col">
+                        <div class="card team-card shadow h-100 team-card-shadow" style="height: 400px;">
+                            <div class="team-member-image" style="height: 400px;">
+                                <img src="images/Team/team-member-7.jpg" alt="Sarah - Marketing Genius" loading="lazy" decoding="async" width="400" height="400" style="width: 100%; height: 100%; object-fit: cover;">
+                            </div>
+                            <div class="card-body text-center">
+                                <h3 class="card-title team-member-name">Sarah</h3>
+                                <p class="card-text text-charcoal">Marketing Genius</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 8 -->
+                    <div class="col">
+                        <div class="card team-card shadow h-100 team-card-shadow" style="height: 400px;">
+                            <div class="team-member-image" style="height: 400px;">
+                                <img src="images/Team/team-member-8.jpeg" alt="Bronwyn - Child Whisperer" loading="lazy" decoding="async" width="400" height="400" style="width: 100%; height: 100%; object-fit: cover;">
+                            </div>
+                            <div class="card-body text-center">
+                                <h3 class="card-title team-member-name">Bronwyn</h3>
+                                <p class="card-text text-charcoal">Child Whisperer</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Team Member 9 -->
+                    <div class="col">
+                        <div class="card team-card shadow h-100 team-card-shadow" style="height: 400px;">
+                            <div class="team-member-image" style="height: 400px;">
+                                <img src="images/Team/Team-member-9.jpg" alt="Shimmer - The Band" loading="lazy" decoding="async" width="400" height="400" style="width: 100%; height: 100%; object-fit: cover;">
+                            </div>
+                            <div class="card-body text-center">
+                                <h3 class="card-title team-member-name">Shimmer</h3>
+                                <p class="card-text text-charcoal">The Band</p>
                             </div>
                         </div>
                     </div>
