--- a/workshops.html
+++ b/workshops.html
@@ -23,7 +23,7 @@
     <link rel="canonical" href="https://www.bloomneventsco.com.au/workshops.html">
     
     <!-- Security Headers -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' cdn.jsdelivr.net www.googletagmanager.com; style-src 'self' 'unsafe-inline' cdn.jsdelivr.net fonts.googleapis.com; font-src 'self' cdn.jsdelivr.net fonts.gstatic.com fonts.googleapis.com; img-src 'self' data: https:; connect-src 'self' www.googletagmanager.com www.google-analytics.com google-analytics.com api.openai.com cdn.jsdelivr.net; frame-src 'self' www.facebook.com widgets.sociablekit.com;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' cdn.jsdelivr.net www.googletagmanager.com; style-src 'self' cdn.jsdelivr.net fonts.googleapis.com; font-src 'self' cdn.jsdelivr.net fonts.gstatic.com fonts.googleapis.com; img-src 'self' data: https:; connect-src 'self' www.googletagmanager.com www.google-analytics.com google-analytics.com api.openai.com cdn.jsdelivr.net formsubmit.co; frame-src 'self' www.facebook.com widgets.sociablekit.com;">
     <!-- Note: X-Frame-Options should be set via HTTP headers, not meta tags -->
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
@@ -793,6 +793,6 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="assets/js/main.js" type="module" defer></script>
-    <script src="scripts/animations.js" type="module" defer></script>
+    <script src="assets/js/animations.js" type="module" defer></script>
     </body>
 </html>
